fix:Run failed: Java CI with Maven
#5